# zapvault

./: Cargo.toml  README.md
src/: cli.rs  hash.rs  main.rs  meta.rs
src/commands/: init.rs  mod.rs  unlock.rs  write.rs
src/vault/: vault.data
