[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rpassword = "7.2"
argon2 = "0.5"
rand_core = "0.6"      # for salt
rand = "0.8"           # to generate random salt
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
