[package]
name = "zapvault"
version = "0.1.0"
edition = "2021"
author = "Pratham Srivastava <github: github.com/pratham-srivastava-07>"
description = "A simplified vault journal"
license = "MIT"
repository = "https://github.com/pratham-srivastava-07/zapvault"
categories = ["algorithms"]
keywords = ["cli", "version-control", "git","developer-utility"]
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rpassword = "7.2"
argon2 = "0.5"
rand_core = "0.6"      # for salt
rand = "0.8"           # to generate random salt
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pbkdf2 = "0.12"
sha2 = "0.10"
aes-gcm = "0.10"